test/files/pos/t3349/TupleSet.java
public interface TupleSet {
    public void addColumn(String name, Class type);
    public void addColumn(String name, String expr);
}