test/files/neg/t8700b/Baz.java
public enum Baz {
    A {
    	public void baz1() {}
    },
    B {
        public void baz1() {}
    };

    public abstract void baz1();
    public void baz2() {}
}
